placehoder image on signin page. fixed footer spacing, changed colors on signup

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -52,6 +52,7 @@
 .logo-img{
 	height: 30px;
 	width: auto;
+	padding-bottom: 10%;
 }
 
 
@@ -160,24 +161,18 @@ p {
 }
 
 .truck-list-box{
-	/*background-image: url("https://hd.unsplash.com/photo-1468956398224-6d6f66e22c35");*/
 	margin-top: 2rem;
 	border: 0.15rem solid slategrey;
 	width: 100%;
 	height: 20rem;
+	padding: 4rem;
 
-
-	/*padding-top: 0.5rem;*/
-	/*padding-bottom: 0.5rem;*/
-	/*padding-left: 0.5rem;*/
 }
 
 .truck-image{
-	/*background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("https://hd.unsplash.com/photo-1468956398224-6d6f66e22c35");*/
-	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/littleCafe.png);
+	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../images/littleCafe.png);
 
 	width: 100%;
-	/*padding-bottom: 66.666666666667%;*/
 	background-size: cover;
 	background-position: center;
 
@@ -195,7 +190,7 @@ p {
 
 .truck-list-box{
 	/*border:3px solid #008000;*/
-	border:3px solid #009B00;
+	/*border:3px solid #009B00;*/
 }
 
 .truck-h3{
@@ -248,6 +243,16 @@ p {
 
 /*--------------------------------------CSS FOR LOGIN/REGISTER---------------------------*/
 
+
+.login-background{
+
+	background: url("https://images.unsplash.com/photo-1471110338536-858caa3dbe45?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb") no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	height: 60rem;
+}
 .truck-login-hr{
 	width: 50%;
 	margin-top:0.25rem;
@@ -390,8 +395,8 @@ body { width: 100%;}
 /*bottom footer */
 .bfoot{
 	color: dimgray;
-	background-color: darkorange;
-	height: 5em;
+	background-color: #4BDB71;
+	height: 4em;
 	width:100%;
 	display: inline-flex;
 	font-family:sans-serif;
